--- a/_posts/2024-03-15-107.md
+++ b/_posts/2024-03-15-107.md
@@ -42,6 +42,8 @@ Ale to nie wszystko! Rozkładamy na czynniki pierwsze, jak budować zespół w I
 Na koniec lekka zmiana kierunku - nie będzie tylko o technologiach. Porozmawiamy o książce, która może nie jest związana bezpośrednio z IT, ale daje mocne podstawy do zrozumienia, jak nawigować w skomplikowanym świecie zarządzania i polityki organizacyjnej.
 
 
+Słuchasz Patoarchitektów dzięki Protopii. Sprawdź, jak Patoarchitekci i Protopia mogą Ci pomóc ➡️ [protopia.tech](https://protopia.tech/)
+
 Linki i ciekawe znaleziska:
 
 - [Cloudflare announces Firewall for AI](https://blog.cloudflare.com/firewall-for-ai)
