--- a/_posts/2024-03-22-108.md
+++ b/_posts/2024-03-22-108.md
@@ -56,6 +56,8 @@ W końcówce, zrobimy zwrot nie tylko ku technologiom, ale także ku myśli orga
 Z nami nigdy nie będziecie na bieżąco, bo zawsze będziemy krok do przodu!
 
 
+Słuchasz Patoarchitektów dzięki Protopii. Sprawdź, jak Patoarchitekci i Protopia mogą Ci pomóc ➡️ [protopia.tech](https://protopia.tech/)
+
 Linki i ciekawe znaleziska:
 
 - [Alexandre Zajac on LinkedIn: #softwareengineering #coding #programming  ](https://www.linkedin.com/posts/alexandre-zajac_softwareengineering-coding-programming-activity-7167420473264345088-tEIe/)
