--- a/_posts/2024-03-29-109.md
+++ b/_posts/2024-03-29-109.md
@@ -44,6 +44,8 @@ Andrzej dzieli się z nami swoim doświadczeniem w uładnianiu zastanych projekt
 Prześwietlamy także, jak Ruby on Rails jest obecnie postrzegane i jak dzięki społeczności i narzędziom typu opensource można wywrzeć realny wpływ na rozwój technologii. Ta rozmowa to prawdziwa gratka nie tylko dla fanów Ruby, ale dla każdego, kto w technologiach webowych szuka czegoś więcej niż tylko kolejnego frameworka.
 
 
+Słuchasz Patoarchitektów dzięki Protopii. Sprawdź, jak Patoarchitekci i Protopia mogą Ci pomóc ➡️ [protopia.tech](https://protopia.tech/)
+
 Linki i ciekawe znaleziska:
 
 - [Twitter Andrzeja](https://twitter.com/andrzejkrzywda)
@@ -55,6 +57,8 @@ Linki i ciekawe znaleziska:
 - [David Heinemeier Hansson](https://world.hey.com/dhh)
 - [Hacker News](https://news.ycombinator.com/)
 - [Yukihiro Matsumoto - Wikipedia](https://en.wikipedia.org/wiki/Yukihiro_Matsumoto)
+- [HTML Over The Wire  ](https://hotwired.dev/)
+- [Rails Event Store](https://railseventstore.org/)
 
 ### Transkrypcja
 
