--- a/_posts/2024-04-12-111.md
+++ b/_posts/2024-04-12-111.md
@@ -42,7 +42,7 @@ newsletter:  |
 
   ➡️ [YouTube]()
 ---
-W nowym odcinku "Patoarchitekci Short!" lecimy z tematem, który wraca jak bumerang – przegląd technologii Radaru od Thoughtworks. 
+W nowym odcinku Patoarchitekci lecimy z tematem, który wraca jak bumerang – przegląd technologii Radaru od Thoughtworks. 
 
 Jak zwykle, będziemy drążyć cztery kąty technologii: od technik po narzędzia, platformy, aż do języków i frameworków. Zobaczymy, co tam Thoughtworks naknocił w swoich rekomendacjach, które oscylują od "bierz to i nie gadaj", po "lepiej omijaj szerokim łukiem".
 
