--- a/_posts/2024-04-12-111.md
+++ b/_posts/2024-04-12-111.md
@@ -56,7 +56,7 @@ Linki i ciekawe znaleziska:
 - [PDF - Technology Radar vol. 30](https://www.thoughtworks.com/content/dam/thoughtworks/documents/radar/2024/04/tr_technology_radar_vol_30_en.pdf)
 - [Thoughtworks: Technology Radar An opinionated guide to today's technology landscape](https://www.thoughtworks.com/radar)
 - [GitHub - vanna-ai/vanna: 🤖 Chat with your SQL database 📊. Accurate Text-to-SQL Generation via LLMs using RAG 🔄.](https://github.com/vanna-ai/vanna)
-- [Demo Text to SQL](https://github.com/raosinMS/demos_public/tree/main/OpenAISQL)
+- [Demo Text to SQL od Radka Ośińskiego](https://github.com/raosinMS/demos_public/tree/main/OpenAISQL)
 - [Kyverno](https://kyverno.io/)
 
 ### Transkrypcja
