--- a/_posts/2023-01-20-58.md
+++ b/_posts/2023-01-20-58.md
@@ -20,6 +20,12 @@ newsletter:  |
 
   ➡️ [YouTube]()
 ---
+[Sprawdź Patoszkolenia!](https://patoarchitekci.io/szkolenia/)
+
+➡️ [04.06.2024 Architektura 101](https://app.easycart.pl/checkout/78499600/04062024-architektura-101)
+
+➡️ [18.06.2024 Observability](https://app.easycart.pl/checkout/78499600/062024-observabiity)
+
 Tym razem sprawdzamy, co ciekawego słychać w świecie GPT-3 i zabezpieczeń z nim związanych. Dodatkowo trochę o wykorzystaniu mono-repo, GitHubie i Backstage!
 
 
