--- a/_posts/2023-02-17-62.md
+++ b/_posts/2023-02-17-62.md
@@ -20,6 +20,12 @@ newsletter:  |
 
   ➡️ [YouTube]()
 ---
+[Sprawdź Patoszkolenia!](https://patoarchitekci.io/szkolenia/)
+
+➡️ [04.06.2024 Architektura 101](https://app.easycart.pl/checkout/78499600/04062024-architektura-101)
+
+➡️ [18.06.2024 Observability](https://app.easycart.pl/checkout/78499600/062024-observabiity)
+
 Multi-tenancy vs single-tenancy! Czyli m. in. implementacja pod B2C a B2B, sposoby implementacji, co w kodzie... a co w infrastrukturze? 
 
 
