--- a/_posts/2023-03-24-67.md
+++ b/_posts/2023-03-24-67.md
@@ -20,6 +20,12 @@ newsletter:  |
 
   ➡️ [YouTube]()
 ---
+[Sprawdź Patoszkolenia!](https://patoarchitekci.io/szkolenia/)
+
+➡️ [04.06.2024 Architektura 101](https://app.easycart.pl/checkout/78499600/04062024-architektura-101)
+
+➡️ [18.06.2024 Observability](https://app.easycart.pl/checkout/78499600/062024-observabiity)
+
 Dziś o dramie Dockera, MSie w FinOps, Infrastructure as SQL i wiele więcej! Posłuchajcie, co tym razem ciekawego znaleźli Patoarchitekci!
 
 
