--- a/_posts/2023-03-31-68.md
+++ b/_posts/2023-03-31-68.md
@@ -20,6 +20,12 @@ newsletter:  |
 
   ➡️ [YouTube]()
 ---
+[Sprawdź Patoszkolenia!](https://patoarchitekci.io/szkolenia/)
+
+➡️ [04.06.2024 Architektura 101](https://app.easycart.pl/checkout/78499600/04062024-architektura-101)
+
+➡️ [18.06.2024 Observability](https://app.easycart.pl/checkout/78499600/062024-observabiity)
+
 Jak zacząć zarządzać architekturą? 
 ChatGPT - pluginy i generowanie scen 3D - oraz do czego wykorzystują go developerzy,
 Github Actions i bezpieczeństwo...
