--- a/_posts/2023-04-28-72.md
+++ b/_posts/2023-04-28-72.md
@@ -20,6 +20,12 @@ newsletter:  |
 
   ➡️ [YouTube]()
 ---
+[Sprawdź Patoszkolenia!](https://patoarchitekci.io/szkolenia/)
+
+➡️ [04.06.2024 Architektura 101](https://app.easycart.pl/checkout/78499600/04062024-architektura-101)
+
+➡️ [18.06.2024 Observability](https://app.easycart.pl/checkout/78499600/062024-observabiity)
+
 Jak skutecznie budować organizacje?  Czy wskaźniki HRowe przekładają się na rzeczywistość?  Co nowego w Kubernetesie?  Odpowiedzi na te pytania - i nie tylko - w najnowszym Shorcie!
 
 
