--- a/_posts/2023-05-05-73.md
+++ b/_posts/2023-05-05-73.md
@@ -27,6 +27,12 @@ newsletter:  |
 
   ➡️ [YouTube](https://youtu.be/xfEH9SAIc5A)
 ---
+[Sprawdź Patoszkolenia!](https://patoarchitekci.io/szkolenia/)
+
+➡️ [04.06.2024 Architektura 101](https://app.easycart.pl/checkout/78499600/04062024-architektura-101)
+
+➡️ [18.06.2024 Observability](https://app.easycart.pl/checkout/78499600/062024-observabiity)
+
 Robimy przegląd najnowszego Technology Radar od ThoughtWorks! Ile w nim wartościowych informacji? M. in. coś o nowych technologiach, cloudzie, Kubernetesie i nie tylko!
 
 
