--- a/_posts/2023-05-12-74.md
+++ b/_posts/2023-05-12-74.md
@@ -30,6 +30,12 @@ newsletter:  |
 
   ➡️ [YouTube](https://www.youtube.com/watch?v=izBVKEbic10)
 ---
+[Sprawdź Patoszkolenia!](https://patoarchitekci.io/szkolenia/)
+
+➡️ [04.06.2024 Architektura 101](https://app.easycart.pl/checkout/78499600/04062024-architektura-101)
+
+➡️ [18.06.2024 Observability](https://app.easycart.pl/checkout/78499600/062024-observabiity)
+
 Patoarchitekci Short! Dziś m. in:
 Co ma wspólnego hacking, Uber i legislacja Wielkiej Brytanii? 
 Czy rzeczywiście Amazon nie radzi sobie z mikroserwisami, z serverlessem, 
