--- a/_posts/2023-05-19-75.md
+++ b/_posts/2023-05-19-75.md
@@ -29,6 +29,12 @@ newsletter:  |
 
   ➡️ [YouTube](https://www.youtube.com/watch?v=3gv5QqhO2CI)
 ---
+[Sprawdź Patoszkolenia!](https://patoarchitekci.io/szkolenia/)
+
+➡️ [04.06.2024 Architektura 101](https://app.easycart.pl/checkout/78499600/04062024-architektura-101)
+
+➡️ [18.06.2024 Observability](https://app.easycart.pl/checkout/78499600/062024-observabiity)
+
 Google, hype na AI a rzeczywistość  
 \- czy w wielu przypadkach nie wystarczy użyć pojęcia machine learningu i deep learningu? Konferencja Google I/O - niewypał? 
 \- a także o nowym artykule LinkedIna i zastosowaniu DORA!
