--- a/_posts/2023-06-30-81.md
+++ b/_posts/2023-06-30-81.md
@@ -20,6 +20,12 @@ newsletter:  |
 
   ➡️ [YouTube]()
 ---
+[Sprawdź Patoszkolenia!](https://patoarchitekci.io/szkolenia/)
+
+➡️ [04.06.2024 Architektura 101](https://app.easycart.pl/checkout/78499600/04062024-architektura-101)
+
+➡️ [18.06.2024 Observability](https://app.easycart.pl/checkout/78499600/062024-observabiity)
+
 Patoarchitekci Short #32 - ostatni przed przerwą wakacyjną! 
  Tym razem więcej o regulacjach odnośnie machine learningu, etyce w AI,
  dalej o AWS Cedar,
