--- a/_posts/2023-09-08-82.md
+++ b/_posts/2023-09-08-82.md
@@ -32,6 +32,12 @@ newsletter:  |
 
   ➡️ [YouTube]()
 ---
+[Sprawdź Patoszkolenia!](https://patoarchitekci.io/szkolenia/)
+
+➡️ [04.06.2024 Architektura 101](https://app.easycart.pl/checkout/78499600/04062024-architektura-101)
+
+➡️ [18.06.2024 Observability](https://app.easycart.pl/checkout/78499600/062024-observabiity)
+
 Patoarchitekci Short #33: Po wakacyjnej przerwie startujemy z nowym sezonem Patoarchitektów. Będzie się działo. Na początek kilka dram min. zmiana licencji w HashiCorp czy sponsor link w Moq. Omówimy też Stack Overflow i spadek wejść o 35% (sic!), a na deser zostawiiliśmy sobie hejt na raporcie McKinsey o absurdalnych metodach mierzenia wydajności developerów. Startujemy!
 
 
